--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<li style="color: black;">SQL: Kaggle</li>
 								<li style="color: black;">Project management Google Certification</li>
 							</p>
-							<a href="CV/Khaled-gohar CV.pdf" class="button">Download CV</a>
+							<a href="Khaled-gohar CV.pdf" class="button">Download CV</a>
 						</div>
 						<div class="col-4 col-5-large col-12-medium">
 							<span ><img style="border-radius: 49%;" src="images/khaled 2.png" alt="" /></span>
