--- a/index.html
+++ b/index.html
@@ -38,21 +38,20 @@
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
 								<h1>Welcome to my portfolio</h1>
-								<h3>I'm Khaled Gohar a Data Analyst</h3>
+								<h3>I'm Khaled Gohar Data analyst / Data Engineer</h3>
 							</header>
-							<p style="font-size: large; color: black;">I’m a data analyst. What fascinates me the most is the ability we have to understand and modify the data to find specific information to answer questions. 
-								I see it as if I were a detective looking for clues. 
-								What I enjoy the most is manipulating, cleaning, and understanding the data to make it more accessible to the end users (dashboard).	
+							<p style="font-size: large; color: black;">I am passionate about utilizing my skills to uncover valuable insights from complex data sets. I am fascinated by the process of transforming raw data into meaningful information that can be used to solve business problems and answer critical questions. With a detective-like approach, I enjoy the challenge of manipulating, cleaning, and analyzing data to make it more accessible and user-friendly through the creation of intuitive dashboards. My goal is to utilize
+my analytical skills to provide actionable insights that help organizations make informed decisions and achieve their objectives.
 							</p>
 							<p style="font-size: large; color: black;">Gmail:<strong>khaledg.gohar@gmail.com</strong> , Phone:<strong>+201021739407</strong></p>
 							<h3>Education</h3>
 							<p style="font-size: large; color: black;">Bachelor Of Mechanical Engineering form the British University in Egypt ( BUE )</p>
 							<h3>Certifications</h3>
 							<p style="font-size: large; color: black;">
+								<li style="color: black;">IBM Data Warehouse Engineer Professional Certificate. (in progress)</li>
+								<li style="color: black;">Microsoft Power BI Data Analyst Professional Certificate. (in progress)</li>
 								<li style="color: black;">Data analysis: Meta</li>
 								<li style="color: black;">Data Analysis with Python: FreeCodeCamp</li>
-								<li style="color: black;">CS50 Programming with Python: Harvard </li>
-								<li style="color: black;">Data Science Professional Certificate : CerNexus (in progress) </li>
 								<li style="color: black;">SQL: Kaggle</li>
 								<li style="color: black;">Project management Google Certification</li>
 							</p>
@@ -101,10 +100,9 @@
 							<section class="box style1">
 								<h3 style="font-size: 1.35em;">Tools</h3>
 								<p style="font-size: medium;">
-									<P style="font-size: large; color: black;">PgAdmin</P>
-									<P style="font-size: large; color: black;">Microsoft SQL Server</P>
+									<P style="font-size: large; color: black;">SSIS / Informatica</P>
+									<P style="font-size: large; color: black;">PgAdmin / SSMS</P>
 									<P style="font-size: large; color: black;">VS Code/Jupyterlab</P>
-									<P style="font-size: large; color: black;">Dbeaver</P>
 									<P style="font-size: large; color: black;">Trello/Notion</P>
 								</p>
 							</section>
@@ -117,7 +115,7 @@
 		<article id="portfolio" class="wrapper style3">
 			<div class="container">
 				<header>
-					<h2>SQL Projects</h2>
+					<h2>Projects</h2>
 					<h2>__________________________</h2>
 				</header>
 				<div class="row">
@@ -138,13 +136,6 @@
 				</div>
 			</div>
 			<div class="container" >
-				<header>
-					<h2>               </h2>
-					<h2>               </h2>
-					<h2>               </h2>
-					<h2>Python Projects</h2>
-					<h2>__________________________</h2>
-				</header>
 				<div class="row">
 					<div class="col-44 col-6-medium col-12-small">
 						<article class="box style2">
