--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ my analytical skills to provide actionable insights that help organizations make
 									<P style="font-size: large; color: black;">SSIS / Informatica</P>
 									<P style="font-size: large; color: black;">PgAdmin / SSMS</P>
 									<P style="font-size: large; color: black;">VS Code/Jupyterlab</P>
+									<P style="font-size: large; color: black;">Oracle APEX</P>
 									<P style="font-size: large; color: black;">Trello/Notion</P>
 								</p>
 							</section>
@@ -136,6 +137,10 @@ my analytical skills to provide actionable insights that help organizations make
 				</div>
 			</div>
 			<div class="container" >
+				<header>
+					<h2>   </h2>
+					<h2>   </h2>
+				</header>
 				<div class="row">
 					<div class="col-44 col-6-medium col-12-small">
 						<article class="box style2">
