--- a/index.html
+++ b/index.html
@@ -122,6 +122,28 @@ my analytical skills to provide actionable insights that help organizations make
 				<div class="row">
 					<div class="col-44 col-6-medium col-12-small">
 						<article class="box style2">
+							<a href="https://github.com/khaled-gohar/E-commerce-Store-Analysis" class="image featured"><img src="images/E-commerce Store Dashboard.png" alt="" /></a>
+							<h3 style="font-size: 1.35em;"><a href="https://github.com/khaled-gohar/E-commerce-Store-Analysis">E-commerce Store Analysis</a></h3>
+							<p style="font-size: large; color: black;">E-commerce Store analysis project using SQL and Power BI.Dashboard - Insights Report - Questions with answers</p>
+						</article>
+					</div>
+					<div class="col-44 col-6-medium col-12-small">
+						<article class="box style2">
+							<a href="https://github.com/khaled-gohar/CallCenter-Dashboard_Power-Bi" class="image featured"><img src="images/Call Center Dashboard.PNG" alt="" /></a>
+							<h3 style="font-size: 1.35em;"><a href="https://github.com/khaled-gohar/CallCenter-Dashboard_Power-Bi">Call Center Analysis</a></h3>
+							<p style="font-size: large; color: black;">Call Center Analysis project using Power BI</p>
+						</article>
+					</div>
+				</div>
+			</div>
+			<div class="container">
+				<header>
+					<h2>    </h2>
+					<h2>    </h2>
+				</header>
+				<div class="row">
+					<div class="col-44 col-6-medium col-12-small">
+						<article class="box style2">
 							<a href="https://github.com/khaled-gohar/SQL_PBI_SalesAnalysis" class="image featured"><img src="images/Sales-Overview-Dashboard.png" alt="" /></a>
 							<h3 style="font-size: 1.35em;"><a href="https://github.com/khaled-gohar/SQL_PBI_SalesAnalysis">Sales Analysis</a></h3>
 							<p style="font-size: large; color: black;">Sales Analysis Project using SQL and Power bi</p>
