--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ my analytical skills to provide actionable insights that help organizations make
 				<div class="row">
 					<div class="col-44 col-6-medium col-12-small">
 						<article class="box style2">
-							<a href="https://github.com/khaled-gohar/E-commerce-Store-Analysis" class="image featured"><img src="images/E-commerce Store Dashboard.png" alt="" /></a>
+							<a href="https://github.com/khaled-gohar/E-commerce-Store-Analysis" class="image featured"><img src="images/E-commerce Store Dashboard.PNG" alt="" /></a>
 							<h3 style="font-size: 1.35em;"><a href="https://github.com/khaled-gohar/E-commerce-Store-Analysis">E-commerce Store Analysis</a></h3>
 							<p style="font-size: large; color: black;">E-commerce Store analysis project using SQL and Power BI.Dashboard - Insights Report - Questions with answers</p>
 						</article>
