--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ my analytical skills to provide actionable insights that help organizations make
 								<li style="color: black;">Project management Google Certification</li>
 							</p>
 							<a href="Khaled-gohar CV.pdf" class="button">Download CV</a>
-							<iframe width="560" height="315" src="https://www.youtube.com/watch?v=aT5Ntv-ogqA&t=4597s" 
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/aT5Ntv-ogqA" 
 						            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
 						            clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
    							</iframe>
