--- a/index.html
+++ b/index.html
@@ -186,32 +186,13 @@ my analytical skills to provide actionable insights that help organizations make
 			<div class="container medium">
 			
 
-			
 
-								<h3>video 8</h3> 
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/kb-_GbpH3sQ" 
-						            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-						            clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-   				</iframe>
-
-								<h3>video 9</h3>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/gojeTqXdBH0" 
-						            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-						            clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-   				</iframe>
-
-								<h3>video 10</h3>
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/P7p2OZj9ewU" 
-						            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-						            clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-   				</iframe>
-
-								<h3>video 11</h3>
+							/*	<h3>video 11</h3>
 				<iframe width="560" height="315" src="https://www.youtube.com/embed/j8FSP8XuFyk" 
 						            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
 						            clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
    				</iframe>
-				
+				*/
 			</div>
 		</article>
 
