--- a/index.html
+++ b/index.html
@@ -184,8 +184,16 @@ my analytical skills to provide actionable insights that help organizations make
 		<!-- Contact -->
 		<article id="contact" class="wrapper style4">
 			<div class="container medium">
-				
-			<iframe src="https://www.youtube.com/watch?v=6-SffKqErsU" title="v1"></iframe>
+				<p1> "v1"</p1>
+			<iframe 
+			    width="560" 
+			    height="315" 
+			    src="https://www.youtube.com/embed/SffKqErsU" 
+			    title="YouTube video player" 
+			    frameborder="0" 
+			    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+			    allowfullscreen>
+			</iframe>
 
 			</div>
 		</article>
