--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ my analytical skills to provide actionable insights that help organizations make
 		<!-- Contact -->
 		<article id="contact" class="wrapper style4">
 			<div class="container medium">
-				<p1> "v1"</p1>
+				<!--<p1> "v1"</p1>
 					<iframe 
 					    width="560" 
 					    height="315" 
@@ -193,7 +193,7 @@ my analytical skills to provide actionable insights that help organizations make
 					    frameborder="0" 
 					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
 					    allowfullscreen>
-					</iframe>
+					</iframe> -->
 
 
 			</div>
