--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ my analytical skills to provide actionable insights that help organizations make
 					<iframe 
 					    width="560" 
 					    height="315" 
-					    src="https://www.youtube.com/embed/wYkyjEeKUzo" 
+					    src="https://www.youtube.com/embed/Ym1iH8-GQOE" 
 					    title="YouTube video player" 
 					    frameborder="0" 
 					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
