--- a/index.html
+++ b/index.html
@@ -184,16 +184,303 @@ my analytical skills to provide actionable insights that help organizations make
 		<!-- Contact -->
 		<article id="contact" class="wrapper style4">
 			<div class="container medium">
-		<!--	/*	<p1> "v1"</p1>
+		<!--	/*	*/  -->
+				<p1> "v1"</p1>
 					<iframe 
 					    width="560" 
 					    height="315" 
-					    src="https://www.youtube.com/embed/Ym1iH8-GQOE" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
 					    title="YouTube video player" 
 					    frameborder="0" 
 					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
 					    allowfullscreen>
-					</iframe>  */  -->
+					</iframe>  
+
+
+
+								<p1> "v2"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/N9bzvre_jss" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+				<p1> "v3"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/Jep7nVN4dB0" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+
+
+								<p1> "v4"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/CfM3aVtK7JM" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+								<p1> "v5"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/shUMovyA1cs&t=3s" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+								<p1> "v6"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/5266en9bae0" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+								<p1> "v7"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/V0zc5Y_THZc" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+								<p1> "v8"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/04BdYu_3WRY" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+
+								<p1> "v9"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/9bxTdAwuStI" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+<!--	/*	
+
+
+								<p1> "v10"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+
+								<p1> "v11"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+
+								<p1> "v12"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+
+								<p1> "v13"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+								<p1> "v1"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+
+								<p1> "v14"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+
+								<p1> "v15"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+								<p1> "v16"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+								<p1> "v17"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+								<p1> "v18"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+								<p1> "v19"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+								<p1> "v20"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+
+								<p1> "v21"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/YX9d7Q7MN9M" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
+
+*/  -->
+
+				
 
 
 			</div>
