--- a/index.html
+++ b/index.html
@@ -242,12 +242,13 @@ my analytical skills to provide actionable insights that help organizations make
 					<iframe 
 					    width="560" 
 					    height="315" 
-					    src="https://www.youtube.com/embed/shUMovyA1cs&t" 
+					    src="https://www.youtube.com/embed/shUMovyA1cs?start=3" 
 					    title="YouTube video player" 
 					    frameborder="0" 
 					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
 					    allowfullscreen>
-					</iframe>  
+					</iframe>
+
 
 
 
