--- a/index.html
+++ b/index.html
@@ -486,7 +486,16 @@ my analytical skills to provide actionable insights that help organizations make
 
 */  -->
 
-		
+		                       <iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/2jGhQpbzHes" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
+
 				
 				
 
