--- a/index.html
+++ b/index.html
@@ -184,6 +184,18 @@ my analytical skills to provide actionable insights that help organizations make
 		<!-- Contact -->
 		<article id="contact" class="wrapper style4">
 			<div class="container medium">
+
+
+<p1> "v1"</p1>
+					<iframe 
+					    width="560" 
+					    height="315" 
+					    src="https://www.youtube.com/embed/gtjxAH8uaP0" 
+					    title="YouTube video player" 
+					    frameborder="0" 
+					    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+					    allowfullscreen>
+					</iframe>  
 			
 		<!--	/*	
 				<p1> "v1"</p1>
